# robotraconteur_companion

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml
.cspell/: custom-dictionary.txt
.github/workflows/: docs.yml  linux_packaging_test.yml  main.yml
cmake/: Config.cmake.in
docs/: Doxyfile.in  main_page_cpp.md
include/RobotRaconteurCompanion/: RobotRaconteurCompanionVersion.h
include/RobotRaconteurCompanion/Converters/: EigenConverters.h
include/RobotRaconteurCompanion/InfoParser/: InfoParserMacros.h
include/RobotRaconteurCompanion/InfoParser/yaml/: action_parser.h  actuator_parser.h  bignum_parser.h  color_parser.h  datatype_parser.h  datetime__clock_parser.h  datetime_parser.h  device__isoch_parser.h  device_parser.h  eventlog_parser.h  fiducial_parser.h  geometry__shapes_parser.h  geometry_parser.h  geometryf_parser.h  geometryi_parser.h  gps_parser.h  hid__joystick_parser.h  identifier_parser.h  image_parser.h  imaging__camerainfo_parser.h  imaging_parser.h  imu_parser.h  laserscan_parser.h  laserscanner_parser.h  lighting_parser.h  objectrecognition_parser.h  octree_parser.h  param_parser.h  pid_parser.h  pointcloud__sensor_parser.h  pointcloud_parser.h  resource_parser.h  robotics__joints_parser.h  robotics__payload_parser.h  robotics__planning_parser.h  robotics__robot_parser.h  robotics__scene_parser.h  robotics__tool_parser.h  robotics__trajectory_parser.h  sensor_parser.h  (+13 more)
include/RobotRaconteurCompanion/StdRobDef/: StdRobDefAll.h  StdRobDef_Macros.h
include/RobotRaconteurCompanion/Util/: AttributesUtil.h  DateTimeUtil.h  DeviceConnector.h  IdentifierUtil.h  ImageUtil.h  InfoFileLoader.h  LocalIdentifiersManager.h  SensorDataUtil.h  TaskGenerator.h  TestFixtures.h  UtilMacros.h  UuidUtil.h
include/RobotRaconteurCompanion/YamlConverters/: YAMLconverter__importer.h  Yaml_loader_enums.h  actuator_parser.h  bignum_parser.h  color_parser.h  datatype_parser.h  datetime.clock_parser.h  datetime_parser.h  device.isoch_parser.h  device_parser.h  eventlog_parser.h  geometry.shapes_parser.h  geometry_parser.h  geometryf_parser.h  geometryi_parser.h  gps_parser.h  hid.joystick_parser.h  identifier_parser.h  image_parser.h  imaging.camerainfo_parser.h  imu_parser.h  laserscan_parser.h  laserscanner_parser.h  lighting_parser.h  octree_parser.h  param_parser.h  pid_parser.h  pointcloud.sensor_parser.h  pointcloud_parser.h  resource_parser.h  robotics.joints_parser.h  robotics.payload_parser.h  robotics.planning_parser.h  robotics.robot_parser.h  robotics.scene_parser.h  robotics.tool_parser.h  robotics.trajectory_parser.h  sensor_parser.h  sensordata_parser.h  servo_parser.h  (+3 more)
src/: AttributesUtil.cpp  DateTimeUtil.cpp  DeviceConnector.cpp  EigenConverters.cpp  IdentifierUtil.cpp  InfoFileLoader.cpp  LocalIdentifiersManager.cpp  StdRobDefAll.cpp  UuidUtil.cpp  Yaml_loader_enums.cpp  yaml_loader_enums.cpp  yaml_loader_impl.cpp
test/: CMakeLists.txt  experimental.testing.companion.test_task_generator.robdef  sawyer_robot_default_config.yml  test_device_connector.cpp  test_eigen_converters.cpp  test_image_util.cpp  test_infoparser.cpp  test_robdef_gen.cpp  test_robotinfo_parser.cpp  test_task_generator.cpp
tools/: generate_info_parsers-old.py  generate_info_parsers.py
tools/build_files/old_ubuntu_build/: old_ubuntu_build.sh  podman_old_ubuntu_build.sh
tools/build_files/packaging/: packaging_test.py
tools/build_files/ros/: cmake_config_options.cmake
