<?xml version="1.0"?>
<package format="2">
  <name>robotraconteur_companion</name>
  <version>0.3.0</version>
  <description>Robot Raconteur Companion library for C++</description>

  <maintainer email="wason@wasontech.com">John Wason</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://robotraconteur.com</url>

  <author email="wason@wasontech.com">John Wason</author>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>robotraconteur</depend>  
      
  <export>    
    <build_type>cmake</build_type>
  </export>
</package>
